@@ -32,5 +32,6 @@ Version 3.0.2 (2022.05.11)
    13. 2022-06-13 Extends example project ex8.
    14. 2022-06-14 Adds logical operations on cuelist (see mask-cuelist)
                   Rewrites ducking as a mask-cuelist special case.
+   15. 2022-06-17 Adds qball->strummer and xball->strummer part translation functions.
 
 
